tests/ui/concurrent_cached_disk_ty_without_create.stderr
error: a custom `ty` on the disk path requires a matching `create` block: without `create` the macro would construct the default `RedbCache` store, which would not match `ty`
 --> tests/ui/concurrent_cached_disk_ty_without_create.rs:8:4
  |
8 | fn my_fn(k: i32) -> Result<i32, String> {
  |    ^^^^^
